@@ -1,4 +1,4 @@
-@set UPDATED 5 June 2017
-@set UPDATED-MONTH June 2017
-@set EDITION 2.0-rc3
-@set VERSION 2.0-rc3
+@set UPDATED 19 July 2017
+@set UPDATED-MONTH July 2017
+@set EDITION 2.2-rc
+@set VERSION 2.2-rc
