@@ -1,7 +1,7 @@
 # Signature of the current package.
 m4_define([AT_PACKAGE_NAME],	  [GnuCOBOL])
 m4_define([AT_PACKAGE_TARNAME],	  [gnucobol])
-m4_define([AT_PACKAGE_VERSION],	  [2.0-rc3])
-m4_define([AT_PACKAGE_STRING],	  [GnuCOBOL 2.0-rc3])
+m4_define([AT_PACKAGE_VERSION],	  [2.2-rc])
+m4_define([AT_PACKAGE_STRING],	  [GnuCOBOL 2.2-rc])
 m4_define([AT_PACKAGE_BUGREPORT], [bug-gnucobol@gnu.org])
 m4_define([AT_PACKAGE_URL],       [https://www.gnu.org/software/gnucobol/])
